# ElcheSort

./: .gitignore  README.md  example_elchesort_pipeline.py  pyproject.toml
elchesort/: __init__.py  blackrock_utilities.py  core.py  postprocessing.py  preprocessing.py  spike_report.py
elchesort/sample_templates/: human_waveform_templates.npy  macaque_waveform_templates.npy
tests/: test_full_workflow.py
